<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F5F5F5"
        android:layout_marginTop="@dimen/app_spacing_2dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_back"
                app:tint="#1B1B1B"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/select_subcategory"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerInside"
            android:src="@drawable/suv"
            tools:ignore="ContentDescription" />

        <com.google.android.material.card.MaterialCardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_spacing_250dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/desc_font_size_12"
                android:paddingBottom="@dimen/desc_font_size_12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mahindra_thar"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/desc_font_size_12"
                    android:textSize="18sp"

                    android:textColor="#222222" />
<View
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/app_spacing_5dp"
    android:layout_height="@dimen/app_spacing_1dp"
    android:background="#281717"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardUseCompatPadding="true"
                    android:backgroundTint="#F5F5F5"
                    app:strokeWidth="1dp"
                    app:strokeColor="#E6E0CF">

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/luxuryCar"
                            style="@style/SubRow"
                            android:text="@string/luxury" />

                        <View style="@style/SubDivider"/>

                        <TextView
                            android:id="@+id/economyCar"
                            style="@style/SubRow"
                            android:text="@string/economy" />

                        <View style="@style/SubDivider"/>

                        <TextView
                            android:id="@+id/compactCar"
                            style="@style/SubRow"
                            android:text="@string/compact" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>
